# mercury-na-plugin-rust-template

./: Cargo.toml  README.md  design.md
.github/workflows/: ci.yml
docker-tests/: Dockerfile  docker-compose.direct.yml  docker-compose.yml
docker-tests/router/: entrypoint.sh
docker-tests/scripts/: run-tests.sh  scenario-dcutr-success.sh  scenario-relay-bulk.sh  scenario-relay-rpc.sh  wait-for-file.sh
docker-tests/test-programs/: test_nat_hg_dcutr_client.c  test_nat_hg_rpc_client.c  test_nat_hg_server.c
relay-server/: Cargo.toml
relay-server/src/: main.rs
src/: plugin.rs  runtime.rs  state.rs
test/: CMakeLists.txt  test_libp2p_relay_client.c  test_libp2p_relay_server.c  test_relay_driver.sh
test/relay-server/: Cargo.toml
