[package]
name = "mercury-na-relay-server"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "mercury-na-relay-server"
path = "src/main.rs"

[dependencies]
libp2p = { version = "0.56", features = [
    "tokio", "tcp", "noise", "yamux", "relay", "identify", "ping", "macros"
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
