[package]
name = "test-relay-server"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "test-relay-server"
path = "src/main.rs"

[dependencies]
libp2p = { path = "../../../rust-libp2p/libp2p", features = [
    "tokio", "tcp", "noise", "yamux", "relay", "identify", "ping", "macros"
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
